[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbu_journalisering_solteqtand_report"
version = "1.0.0"
authors = [
  { name="MBU", email="rpa@mbu.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*",
    "Pillow == 11.3.0",
    "itk-dev-shared-components",
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]
